--- a/config/studip-httpd.conf.dist
+++ b/config/studip-httpd.conf.dist
@@ -27,7 +27,7 @@
     php_value error_reporting 22519
     
     #ab PHP 5.6
-    #php_value default_charset =
+    #php_value default_charset none 
     
     #Wenn die suhosin extension benutzt wird, sind diese Optionen notwendig
     #php_value suhosin.cookie.plainlist Seminar_Session
