--- a/config/assets.yml
+++ b/config/assets.yml
@@ -105,6 +105,7 @@ javascripts:
     - javascripts/smiley.js
     - javascripts/big-image-handler.js
     - javascripts/opengraph.js
+    - javascripts/actionmenu.js
 
     - javascripts/studip-secure-forms.js
     - javascripts/studip-css.js
