--- a/config/config_local.inc.php.dist
+++ b/config/config_local.inc.php.dist
@@ -538,6 +538,19 @@ $PHPASS_USE_PORTABLE_HASH = false;           //use portable (less secure) hashin
 
 $ENABLE_FREE_ACCESS = TRUE;                 //if true, courses with public access are available
 
+// Login ip range check
+$ENABLE_ADMIN_IP_CHECK = false;
+$ENABLE_ROOT_IP_CHECK = false;
+$LOGIN_IP_RANGES =
+    [
+        'V4' => [
+            ['start' => '', 'end' => ''],
+        ]
+        ,
+        'V6' => [
+            ['start' => '', 'end' => ''],
+        ]
+    ];
 
 /*path generation
 -----------------------------------------------------------------
