--- a/config/assets.yml
+++ b/config/assets.yml
@@ -96,6 +96,7 @@ javascripts:
     - javascripts/register.js
     - javascripts/contentbox.js
     - javascripts/dates.js
+    - javascripts/tour.js
     - javascripts/questionnaire.js
     - javascripts/tables.js
     - javascripts/start.js
