--- a/config/config_local.inc.php.dist
+++ b/config/config_local.inc.php.dist
@@ -551,3 +551,6 @@ $ENABLE_FREE_ACCESS = TRUE;                 //if true, courses with public acces
 //create the html-version of $UNI_NAME clean
 $UNI_NAME = htmlspecialchars($UNI_NAME_CLEAN, ENT_QUOTES, 'cp1252');
 
+// Content languages
+$CONTENT_LANGUAGES['de_DE'] = array('picture' => 'lang_de.gif', 'name' => 'Deutsch');
+//$CONTENT_LANGUAGES['en_GB'] = array('picture' => 'lang_en.gif', 'name' => 'English');
