fix migration and deactivation re #6659

--- a/config/config_local.inc.php.dist
+++ b/config/config_local.inc.php.dist
@@ -326,6 +326,8 @@ $DEFAULT_TIMEZONE = 'Europe/Berlin';
 
 $INSTALLED_LANGUAGES["de_DE"] = array ("path"=>"de", "picture"=>"lang_de.gif", "name"=>"Deutsch");
 $INSTALLED_LANGUAGES["en_GB"] = array ("path"=>"en", "picture"=>"lang_en.gif", "name"=>"English");
+$CONTENT_LANGUAGES['de_DE'] = array('picture' => 'lang_de.gif', 'name' => 'Deutsch');
+//$CONTENT_LANGUAGES['en_GB'] = array('picture' => 'lang_en.gif', 'name' => 'English');
 
 $DEFAULT_LANGUAGE = "de_DE";  // which language should we use if we can gather no information from user?
 
