refactor assigning of teachers and groups when editing a course date, re #6851

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -109,6 +109,7 @@ javascripts:
     - javascripts/opengraph.js
     - javascripts/actionmenu.js
 
+    - javascripts/studip-selection.js
     - javascripts/studip-secure-forms.js
     - javascripts/studip-css.js
     - javascripts/studip-tooltip.js
