db-conversion-script, changing encoding to utf-8, part 1, refs #6926

--- a/config/config_local.inc.php.dist
+++ b/config/config_local.inc.php.dist
@@ -560,7 +560,7 @@ $LOGIN_IP_RANGES =
 
 
 //create the html-version of $UNI_NAME clean
-$UNI_NAME = htmlspecialchars($UNI_NAME_CLEAN, ENT_QUOTES, 'cp1252');
+$UNI_NAME = htmlspecialchars($UNI_NAME_CLEAN, ENT_QUOTES);
 
 // Content languages
 $CONTENT_LANGUAGES['de_DE'] = array('picture' => 'lang_de.gif', 'name' => 'Deutsch');
