--- a/config/.htaccess.dist
+++ b/config/.htaccess.dist
@@ -14,6 +14,8 @@ php_value max_execution_time 300
 php_flag short_open_tag On
 php_flag session.use_trans_sid Off
 php_flag magic_quotes_gpc On
+php_value default_charset utf-8
+
 #PHP Konstanten sind hier nicht verfügbar
 # 22519 = E_ALL & ~(E_NOTICE|E_DEPRECATED) PHP 5.3.x
 php_value error_reporting 22519
@@ -32,4 +34,3 @@ php_value error_reporting 22519
 #php_value suhosin.request.max_value_length 10000000
 #php_value suhosin.request.max_vars 10000
 #php_value suhosin.request.max_varname_length 128
-
