MOADB: add js file

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -74,6 +74,7 @@ javascripts:
     - javascripts/updater.js
     - javascripts/study_area_selection.js
     - javascripts/file_system.js
+    - javascripts/files.js
     - javascripts/arbeitsgruppen.js
     - javascripts/news.js
     - javascripts/markup.js
