--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,6 +7,7 @@ javascripts:
     - javascripts/jquery/jquery-ui-timepicker-1.5.5.js
     - javascripts/jquery/jquery.multi-select-0.9.12.js
     - javascripts/jquery/jquery.scrollTo-2.1.1.js
+    - javascripts/jquery/jquery.ui.touch-punch.min.js
 
     - javascripts/studip-jquery-tweaks.js
     - javascripts/studip-jquery.multi-select.tweaks.js
