--- a/config/studip-httpd.conf.dist
+++ b/config/studip-httpd.conf.dist
@@ -11,8 +11,12 @@
     #RewriteRule ^download/(normal|force_download|zip)/([0-467])/([^/]+)/(.+)$ /studip/sendfile.php?$1=1&type=$2&file_id=$3&file_name=$4 [L]
     #RewriteRule ^download/(normal|force_download|zip)/5/([^/]+)/([^/]+)/(.+)$ /studip/sendfile.php?$1=1&type=5&range_id=$2&list_id=$3&file_name=$4 [L]
 
+    #Apache 2.2
     Order Allow,Deny
     Allow from all
+
+    #Apache 2.4
+    #Require all granted
 
     php_value upload_max_filesize 7M
     php_value post_max_size 8M
