update newly arrived string functions, refs #6926

--- a/config/config_local.inc.php.dist
+++ b/config/config_local.inc.php.dist
@@ -45,7 +45,7 @@ if (DIRECTORY_SEPARATOR != '/') {
     $CANONICAL_RELATIVE_PATH_STUDIP = str_replace(DIRECTORY_SEPARATOR, '/', $CANONICAL_RELATIVE_PATH_STUDIP);
 }
 
-if (substr($CANONICAL_RELATIVE_PATH_STUDIP,-1) != "/"){
+if (mb_substr($CANONICAL_RELATIVE_PATH_STUDIP,-1) != "/"){
     $CANONICAL_RELATIVE_PATH_STUDIP .= "/";
 }
 
