--- a/config/assets.yml
+++ b/config/assets.yml
@@ -154,6 +154,9 @@ javascripts:
   lightbox:
     - javascripts/jquery/lightbox/lightbox.min.js
 
+  subcourses:
+    - javascripts/subcourses.js
+
 css:
   base:
     # filename : media
