--- a/config/studip-httpd.conf.dist
+++ b/config/studip-httpd.conf.dist
@@ -1,6 +1,6 @@
 #Alias /studip	/usr/local/studip/public
 <Directory "/usr/local/studip/public">
-    # für rewrite wird die Option FollowSymLinks oder SymLinksIfOwnerMatch benötigt ...
+    # fÃ¼r rewrite wird die Option FollowSymLinks oder SymLinksIfOwnerMatch benÃ¶tigt ...
     #Options SymLinksIfOwnerMatch
     #RewriteEngine on
     #RewriteRule ^download/(normal|force_download|zip)/([0-467])/([^/]+)/(.+)$ sendfile.php?$1=1&type=$2&file_id=$3&file_name=$4 [L]
@@ -25,12 +25,13 @@
     php_flag short_open_tag On
     php_admin_flag allow_url_fopen On
     php_value max_input_vars 10000
-    #PHP Konstanten sind hier nicht verfügbar
+    #PHP Konstanten sind hier nicht verfÃ¼gbar
     # 22519 = E_ALL & ~(E_NOTICE|E_DEPRECATED) PHP 5.3.x
     php_value error_reporting 22519
 
-    #ab PHP 5.6
-    #php_value default_charset none
+    # PHP 5.5 (ab 5.6 Standardeinstellung)
+    php_value default_charset utf-8
+    php_value mbstring.internal_encoding utf-8
 
     #Wenn die suhosin extension benutzt wird, sind diese Optionen notwendig
     #php_value suhosin.cookie.plainlist Seminar_Session
