--- a/config/.htaccess.dist
+++ b/config/.htaccess.dist
@@ -1,4 +1,4 @@
-#für rewrite wird die Option FollowSymLinks oder SymLinksIfOwnerMatch benötigt ...
+#fÃ¼r rewrite wird die Option FollowSymLinks oder SymLinksIfOwnerMatch benÃ¶tigt ...
 #Options SymLinksIfOwnerMatch
 #RewriteEngine on
 #RewriteRule ^download/(normal|force_download|zip)/([0-467])/([^/]+)/(.+)$ sendfile.php?$1=1&type=$2&file_id=$3&file_name=$4 [L]
@@ -21,7 +21,7 @@ php_value max_input_vars 10000
 php_value default_charset utf-8
 php_value mbstring.internal_encoding utf-8
 
-#PHP Konstanten sind hier nicht verfügbar
+#PHP Konstanten sind hier nicht verfÃ¼gbar
 # 22519 = E_ALL & ~(E_NOTICE|E_DEPRECATED) PHP 5.3.x
 php_value error_reporting 22519
 #ab PHP 5.6
