introduce ShareWidget::addCopyableLink() that automatically copies the link to the clipboard (incl confirmation animation afterwards), fixes #7825

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -116,6 +116,7 @@ javascripts:
     - javascripts/opengraph.js
     - javascripts/actionmenu.js
     - javascripts/article.js
+    - javascripts/copyable-links.js
 
     - javascripts/studip-selection.js
     - javascripts/studip-secure-forms.js
