place global search in top bar, attach hint list and bind to STRG + Space, re #7893

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -127,6 +127,8 @@ javascripts:
 
     - javascripts/course_archive.js
 
+    - javascripts/globalsearch.js
+
   raumzeit:
     - javascripts/raumzeit.js
 
