--- a/config/config.inc.php.dist
+++ b/config/config.inc.php.dist
@@ -87,7 +87,7 @@ $DEFAULT_TITLE_FOR_STATUS = array(
     'dozent'   => array(_('Lehrende'), _('Lehrende')),
     'deputy'   => array(_('Vertretung'), _('Vertretungen')),
     'tutor'    => array(_('Tutor/-in'), _('Tutor/-innen')),
-    'autor'    => array(_('Studiernde'), _('Studierende')),
+    'autor'    => array(_('Studierende'), _('Studierende')),
     'user'     => array(_('Leser/-in'), _('Leser/-innen')),
     'accepted' => array(_('Vorläufig akzeptierte Person'),
                         _('Vorläufig akzeptierte Personen')));
