--- a/config/assets.yml
+++ b/config/assets.yml
@@ -159,6 +159,10 @@ javascripts:
   subcourses:
     - javascripts/subcourses.js
 
+  files:
+    - *tablesorter
+    - javascripts/jquery/jquery.filtertable-1.5.7.js
+
 css:
   base:
     # filename : media
