use jquery-cropper as recommended by Cropper developer, re #8346

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -187,6 +187,7 @@ javascripts:
 
   avatar:
     - javascripts/vendor/cropper.js
+    - javascripts/jquery/jquery-cropper-1.0.0.js
     - javascripts/avatar.js
 
 css:
