configure js inclusion for webpack, new icons for zooming and rotating, re #8346

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "autoprefixer": "8.6.1",
         "blueimp-file-upload": "9.19.1",
         "chartist": "0.11.0",
+        "cropperjs": "1.4.0",
         "css-loader": "0.28.11",
         "expose-loader": "0.7.5",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -24,6 +25,7 @@
         "gridstack": "0.3.0",
         "highlight.js": "9.12.0",
         "jquery": "3.2.1",
+        "jquery-cropper": "1.0.0",
         "jquery-nestable": "0.8.0",
         "jquery-ui": "1.12.1",
         "jquery-ui-timepicker-addon": "1.6.3",
