load avatars' cropping async, refs #8686

--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "browserslist": [
         "> 1%",
         "last 2 versions"
-    ]
+    ],
+    "prettier": {
+        "printWidth": 120,
+        "singleQuote": true,
+        "tabWidth": 4
+    }
 }
