--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "wds": "webpack-dev-server --progress --config webpack.dev-server.js",
         "webpack-dev": "webpack --config webpack.dev.js --mode development",
-        "webpack-prod": "webpack --config webpack.prod.js --mode production"
+        "webpack-prod": "webpack --config webpack.prod.js --mode production --display errors-only"
     },
     "author": "",
     "license": "GPL-2.0",
