--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "multiselect": "0.9.12",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "postcss-loader": "3.0.0",
-        "select2": "4.0.5",
-        "sticky-kit": "1.1.2",
+        "select2": "4.0.6-rc.1",
+        "sticky-kit": "1.1.3",
         "style-loader": "0.23.1",
         "tablesorter": "2.31.0",
         "uglifyjs-webpack-plugin": "2.0.1",
