separate JS code, fixes #8975

--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
     "eslintConfig": {
         "env": {
             "browser": true
+        },
+        "parserOptions": {
+            "ecmaVersion": 6,
+            "sourceType": "module"
         }
     },
     "prettier": {
