--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "chartist": "0.11.0",
         "cropperjs": "1.4.2",
         "css-loader": "1.0.0",
+        "es6-promise": "4.2.5",
         "expose-loader": "0.7.5",
         "favico.js": "0.3.10",
         "gridstack": "0.3.0",
